maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: '<-' expected but ')' found.
  for(x->0 to l-1)
                 ^JediEscaper:26: error: illegal start of simple expression
}
^JediEscaper:28: error: ':' expected but ',' found.
def arround(x,y,cpt) {
             ^JediEscaper:93: error: identifier expected but '}' found.
}
^